# core_engine

./: .gitignore  CMakeLists.txt  README.md  engine_app
docs/: Day5.md  day1.md  day2.md  day3.md  day4.md
engine/: engine_config.h  engine_version.h
engine/include/: engine.h
engine/include/entities/: 3DspriteRotation.h  M_PI.h  Vec2_models.h  Vec3.h  spriteRotation.h
engine/include/math/vectors/2Dvector/: 2Dvector.c  twoDvector.h
engine/include/math/vectors/2Dvector/Lerp/: lerp2D.c  lerp3D.c  lerpThreeD.h  lerpTwoD.h
engine/include/math/vectors/3Dvector/: 3Dvector.c  threeDvector.h
engine/src/: engine.c  main.c
engine/src/math/: portfolio_math.h
tests/2Dvector_tests/: 2Dtests1.c
tests/3Dvector_tests/: 3Dtests1.c
tests/lerp_tests/: 2Dlerp_tests.c  3Dlerp_tests.c
